# rechner

./: .gitignore  CMakeLists.txt  README.md  cpp_hal_test.code-workspace
Core/Inc/: main.h  rechner_gcc.h  rechner_port.h  rechner_rcc.h  rechner_reg.h  rechner_register_map.h
Core/Src/: main.c  rechner_main.cpp  rechner_port.cpp  rechner_rcc.cpp  rechner_reg.cpp  stm32f4xx_hal_msp.c
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_cortex.h
Tools/: serialcommand.py
cmake/: arm-gcc-toolchain.cmake
